fix(course-detail): modify gap on mobile

--- a/src/pages/CourseDetails/CourseDetails.css
+++ b/src/pages/CourseDetails/CourseDetails.css
@@ -50,5 +50,6 @@
 
     .course-details-golf-info {
         flex-direction: column-reverse;
+        gap: 24px;
     }
 }
